# yas-pacman

./: CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  EULA.md  Makefile  README.md
assets/: featured.json
qml/: Main.qml
src/: main.cpp  pacmanadapter.cpp  pacmanadapter.h
tests/: CMakeLists.txt  tst_pacmanadapter.cpp
